--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -3,8 +3,8 @@
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   overflow: hidden;
+  display: flex;
 }
-
 .card {
   /* display, flex-direction, flex-grow, flex-basis */
   border: 1px solid #CAD0D2;
@@ -13,13 +13,19 @@
   border-radius: 0;
   border-left: 1px solid #D7DBDD;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 100%;
 }
-
 .cardDescription {
   /* display, flex-direction, align-items, flex-grow */
   padding: 15px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
 }
-
 html {
   font-family: "Raleway", "Helvetica", sans-serif;
   font-weight: 400;
@@ -27,20 +33,17 @@ html {
   height: 100%;
   background-color: #FFFFFF;
 }
-
 .cardDescriptionIcon {
   font-size: 32px;
   margin-bottom: 10px;
   color: #BCD2DA;
 }
-
 .cardDescriptionText {
   color: #57727C;
   font-size: 12px;
   text-align: center;
   max-width: calc(100% - 30px);
 }
-
 .cardPrice {
   text-align: center;
   color: #57727C;
